--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,8 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.1",
+    "nodemon": "^3.1.4",
+    "react-icons": "^5.2.1",
     "validator": "^13.12.0"
   }
 }
